packages/vkui/src/components/PullToRefresh/PullToRefresh.module.css
.host {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
}

.refreshing {
  pointer-events: none;
  touch-action: none;
}

.controls {
  z-index: var(--vkui_internal--z_index_fixed_layout);
  pointer-events: none;
}

.host:not(.ios) .controls {
  z-index: var(--vkui_internal--z_index_pull_to_refresh);
}

.spinner {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  inline-size: 40px;
  block-size: 40px;
  margin: auto;
  color: var(--vkui--color_icon_accent);
  background: var(--vkui--color_background_modal);
  border-radius: 50%;
  box-shadow: 0 2px 6px rgb(0, 0, 0, 0.2);
  opacity: 0;
  transition:
    transform 300ms cubic-bezier(0.1, 0, 0.25, 1),
    opacity 220ms ease-out;
}

.ios .spinner {
  color: var(--vkui--color_icon_medium);
  background: none;
  border-radius: 0;
  box-shadow: none;
}

.watching .spinner {
  transition: opacity 220ms ease-out;
}

.spinnerSelf {
  stroke: currentColor;
}

.ios.refreshing .spinnerSelf {
  animation: animationPullToRefreshToRefreshing 380ms ease-out;
}

.spinnerPath {
  transform: rotate(-90deg);
  transform-origin: center center;
  transition: stroke-dashoffset 167ms ease-out;
}

.watching .spinnerPath,
.refreshing .spinnerPath {
  transition: none;
}

.spinnerOn .spinnerPath {
  animation: animationPullToRefreshRotator var(--vkui_internal--duration) linear infinite;
}

.content {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  overflow: hidden;
  transition: transform 400ms var(--vkui--animation_easing_platform);
}

.watching .content {
  transition: none;
}

@keyframes animationPullToRefreshToRefreshing {
  0% {
    transform: scale(1);
  }

  30% {
    transform: scale(0.6);
  }

  90% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(1);
  }
}
@keyframes animationPullToRefreshRotator {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

